src/objects/Account_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Mappings</relationshipLabel>
        <relationshipName>Account_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the ID is a Brand ID rather than a Client ID</description>
        <inlineHelpText>Tick if the ID is a Brand ID rather than a Client ID</inlineHelpText>
        <label>Brand ID?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Key__c</fullName>
        <label>Customer Ref</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <picklist>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCI Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCI Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operative One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nielsen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDM Origins</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueSourceKey__c</fullName>
        <label>UniqueSourceKey</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Mapping</label>
    <nameField>
        <displayFormat>AM-{00000}</displayFormat>
        <label>Account Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AccountMapping_Only_VDT_Can_Update</fullName>
        <active>true</active>
        <description>Only VDT can update Account Mapping</description>
        <errorConditionFormula>!( $Setup.No_Validations__c.Flag__c ) &amp;&amp;
 !ISNEW() &amp;&amp;
 ! $User.Virtual_Data_Team_Member__c</errorConditionFormula>
        <errorMessage>You are not authorised to update an Account Mapping, please create an Update Request.</errorMessage>
    </validationRules>
</CustomObject>